turtleart.stairs.Stairs.scala.error
Erreur de compilation :
Stairs:3: error: ';' expected but '(' found.
    avance(35);droite(90);avance(35):gauche(90)
                                           ^